--- a/Assets/CodeManager/Editor/Wizard/CodeManagerWizard.uxml
+++ b/Assets/CodeManager/Editor/Wizard/CodeManagerWizard.uxml
@@ -3,4 +3,5 @@
     <ui:Label tabindex="-1" text="Scriptable Objects:" display-tooltip-when-elided="true" style="color: rgb(255, 255, 255);" />
     <ui:ScrollView name="ScriptableObjects" style="height: 259px;" />
     <ui:VisualElement name="Inspector" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0);" />
+    <ui:Button text="Generate Class" display-tooltip-when-elided="true" name="Generate" />
 </ui:UXML>
