--- a/Assets/CodeManager/Editor/Wizard/CodeManagerWizard.uxml
+++ b/Assets/CodeManager/Editor/Wizard/CodeManagerWizard.uxml
@@ -2,6 +2,8 @@
     <Style src="project://database/Assets/CodeManager/Editor/Wizard/CodeManagerWizard.uss?fileID=7433441132597879392&amp;guid=e34849304aefb594f9d1a07c00cd92a5&amp;type=3#CodeManagerWizard" />
     <ui:Label tabindex="-1" text="Scriptable Objects:" display-tooltip-when-elided="true" style="color: rgb(255, 255, 255);" />
     <ui:ScrollView name="ScriptableObjects" style="height: 259px;" />
-    <ui:VisualElement name="Inspector" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0);" />
-    <ui:Button text="Generate Class" display-tooltip-when-elided="true" name="Generate" />
+    <ui:VisualElement name="Inspector" style="flex-grow: 1;" />
+    <ui:VisualElement style="flex-grow: 0.5; background-color: rgba(0, 0, 0, 0); padding-top: 20px;">
+        <ui:Button text="Generate Class" display-tooltip-when-elided="true" name="Generate" />
+    </ui:VisualElement>
 </ui:UXML>
