Started adding selector for generation

--- a/Assets/CodeManager/Editor/Wizard/CodeManagerWizard.uxml
+++ b/Assets/CodeManager/Editor/Wizard/CodeManagerWizard.uxml
@@ -3,7 +3,9 @@
     <ui:Label tabindex="-1" text="Scriptable Objects:" display-tooltip-when-elided="true" style="color: rgb(255, 255, 255);" />
     <ui:ScrollView name="ScriptableObjects" style="height: 259px;" />
     <ui:VisualElement name="Inspector" style="flex-grow: 1;" />
-    <ui:VisualElement style="flex-grow: 0.5; background-color: rgba(0, 0, 0, 0); padding-top: 20px;">
+    <ui:VisualElement name="ClassGeneration" style="flex-grow: 0.5; background-color: rgba(0, 0, 0, 0); padding-top: 20px;">
+        <ui:TextField picking-mode="Ignore" value="Enter Class Type" />
+        <ui:DropdownField index="-1" choices="System.Collections.Generic.List`1[System.String]" />
         <ui:Button text="Generate Class" display-tooltip-when-elided="true" name="Generate" />
     </ui:VisualElement>
 </ui:UXML>
