--- a/Assets/CodeManager/Editor/Wizard/CodeManagerWizard.uxml
+++ b/Assets/CodeManager/Editor/Wizard/CodeManagerWizard.uxml
@@ -3,7 +3,7 @@
     <ui:Label tabindex="-1" text="Scriptable Objects:" display-tooltip-when-elided="true" style="color: rgb(255, 255, 255);" />
     <ui:ScrollView name="ScriptableObjects" style="height: 259px;" />
     <ui:Button text="Deselect" display-tooltip-when-elided="true" name="DeselectScriptObj" />
-    <ui:VisualElement name="Inspector" style="flex-grow: 1;" />
+    <ui:VisualElement name="Inspector" style="flex-grow: 1; margin-top: 20px;" />
     <ui:VisualElement name="ClassGeneration" style="flex-grow: 0.5; background-color: rgba(0, 0, 0, 0); padding-top: 20px;">
         <ui:TextField picking-mode="Ignore" value="Enter Class Type" name="ClassType" />
         <ui:DropdownField index="-1" name="GenerateType" />
